<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseClass">

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/sectionClass"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckedTextView
        android:id="@+id/ctv1"
        android:layout_width="365dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="345dp"
        android:layout_height="104dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv1">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb1" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb2" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/ctv2"
        android:layout_width="361dp"
        android:layout_height="38dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg1" />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="361dp"
        android:layout_height="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv2">

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb3" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb4" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/ctv3"
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg2" />

    <RadioGroup
        android:id="@+id/rg3"
        android:layout_width="352dp"
        android:layout_height="98dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv3">

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb5" />

        <RadioButton
            android:id="@+id/rb6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb6" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/ctv4"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg3" />

    <RadioGroup
        android:id="@+id/rg4"
        android:layout_width="367dp"
        android:layout_height="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv4">

        <RadioButton
            android:id="@+id/rb7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb2" />

        <RadioButton
            android:id="@+id/rb8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRb5" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg4" />

</androidx.constraintlayout.widget.ConstraintLayout>